# RealTimeEventDrivenSystem

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTEXT.md  README.md  start.sh  stop.sh  test.tmp#  test.tmp##
cpp/include/: order_book.hpp  quote_feed_handler.hpp  quote_handler.hpp  trade_feed_handler.hpp
cpp/src/: main.cpp  quote_feed_handler.cpp  trade_feed_handler.cpp
docs/: README.md  api-binance.md  kdbx-real-time-architecture-measurement-notes.md
docs/decisions/: adr-001-Timestamps-and-latency-measurement.md  adr-002-Feed-handler-to-kdb-ingestion-path.md  adr-003-Tickerplant-Logging-and-Durability-Strategy  adr-003-Tickerplant-Logging-and-Durability-Strategy.md  adr-004-Real-Time-Rolling-Analytics-Computation.md  adr-005-Telemetry-And-Metrics-Aggregation-Strategy  adr-005-Telemetry-And-Metrics-Aggregation-Strategy.md  adr-006-Recovery-And-Replay-Strategy.md  adr-007-Visualisation-And-Consumption-Strategy.md  adr-008-Error-Handling-Strategy.md  adr-009-L1-Order-Book-Architecture.md
docs/specs/: trades-schema.md
kdb/: rdb.q  replay.q  rte.q  rte2.q  tel.q  tp.q
src/: feed_handler.cpp  main.cpp  order_book.hpp  quote_handler_main.cpp  rest_client.hpp  test_snapshot.cpp
